styled index.html

--- a/day-64-starting-files-top-movies/templates/base.html
+++ b/day-64-starting-files-top-movies/templates/base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -34,6 +37,8 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+    <div class="background-cover"></div>
+    <img class="background-image" src="/static/images/background.jpg" alt="bg">
     {% block content %}{% endblock %}
   </body>
 </html>
