--- a/day-64-starting-files-top-movies/static/css/styles.css
+++ b/day-64-starting-files-top-movies/static/css/styles.css
@@ -1,20 +1,93 @@
-*, *:before, *:after {
-	 box-sizing: border-box;
+*{
+	 font-family: 'Poppins', sans-serif;
+	 margin: 0;
+	 padding: 0;
 }
- html {
+.container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+.background-image {
+	position: absolute;
+	z-index: -1;
+	width: 100vw;
+}
+
+ /* html {
 	 font-size: 18px;
 	 line-height: 1.5;
 	 font-weight: 300;
 	 color: #333;
 	 font-family: "Nunito Sans", sans-serif;
-}
- body {
+} */
+ /* body {
+	background-color: black;
 	 margin: 0;
 	 padding: 0;
 	 height: 100vh;
 	 background-color: #ecf0f9;
 	 background-attachment: fixed;
+} */
+
+.nav-bar {
+	/* border: 1px solid red; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	width: 100vw;
+	padding:0 5rem;
+	background-image: linear-gradient(rgb(0, 0, 0.75), rgba(0, 0, 0, .25));
+	/* background-color: rgba(0, 0, 0, 0.347); */
 }
+
+.nav-bar::before {
+	content: "";
+	display: block;
+	width: 100vw;
+	height: 1rem;
+	background-color: black;
+	margin-bottom: 1rem;
+}
+/* .nav-bar::after {
+	content: "";
+	display: block;
+	width: 100vw;
+	height: 1rem;
+	background-color: ;
+	margin-top: 1rem;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+} */
+
+.icon{
+	display: block;
+	height: 4rem;
+}
+
+.heading{
+	display: block;
+	color: whitesmoke;
+	letter-spacing: 2rem;
+	font-weight: lighter;
+}
+
+main {
+	display: block;
+	padding: 1rem 1rem;
+	background-color: rgba(0, 0, 0, 0.5);
+	border: 5px solid #E19898;
+	margin-top: 2rem;
+	width: 50%;
+}
+
+.description {
+	color: white;
+}
+
 .large {
      font-size: 3rem;
 }
@@ -33,7 +106,7 @@
 	 overflow: hidden;
 	 text-overflow: ellipsis;
 }
- .heading {
+ /* .heading {
 	 width: 100%;
 	 margin-left: 0.5rem;
 	 font-weight: 950;
@@ -44,8 +117,8 @@
 	 padding-bottom: 0.5em;
 	 margin-bottom: 1rem;
 	 position: relative;
-}
- .heading:after {
+} */
+ /* .heading:after {
 	 display: block;
 	 content: '';
 	 position: absolute;
@@ -53,7 +126,7 @@
 	 height: 4px;
 	 background: linear-gradient(135deg, #1a9be6, #1a57e6);
 	 bottom: 0;
-}
+} */
  .description {
 	 width: 100%;
 	 margin-top: 0;
@@ -70,6 +143,8 @@
 	 perspective: 1000px;
 	 margin: 1rem auto;
 	 position: relative;
+	 display: block;
+
 }
  @media screen and (max-width: 800px) {
 	 .card {
@@ -138,7 +213,37 @@
  .card:nth-child(even):hover .back {
 	 transform: rotateY(0deg);
 }
- .button {
+
+
+.button{
+	display: block;
+	/* border: 1px solid black; */
+	width: fit-content;
+	padding: 0.75rem 1.25rem;
+	color: white;
+	background-color: black;
+	box-shadow: -0.5rem 0.5rem #E19898;
+	transition: ease-in-out all 200ms;
+	border: 1px solid #E19898
+}
+
+a:link:active {
+	color: white;
+}
+a:link{
+	text-decoration: none;
+	color: white;
+}
+a:hover{
+	color: white;
+}
+
+.button:hover{
+    transform: translate(-0.5rem,0.5rem);
+	box-shadow: none;
+}
+
+ /* .button {
 	 transform: translateZ(40px);
 	 cursor: pointer;
 	 -webkit-backface-visibility: hidden;
@@ -192,7 +297,7 @@
 	 transform: translateZ(-20px);
 	 top: 12px;
 	 top: 12px;
-}
+} */
 .container.add {
     margin-top: 40px;
     margin-bottom: 20px;
