--- a/day-64-starting-files-top-movies/templates/select.html
+++ b/day-64-starting-files-top-movies/templates/select.html
@@ -5,11 +5,15 @@
 {% block content %}
 
 <div class="container">
-    <h1 class="heading">Select Movie</h1>
-  <p>
+  <nav class="nav-bar">
+    <h1 class="heading">SELECT MOVIE</h1>
+  </nav>
+  <div class="select-movie-list">
+    <p>
       {% for movie in data: %}
     <a href="{{ url_for('select', id=movie.id) }}"> {{ movie.title }} - {{ movie.release_date }}</a>
   </p>
+  </div>
 {% endfor %}
 </div>
 
